# SkyFill

./: .gitignore  CMakeLists.txt  Lensflare.md  Makefile  README.md  amoeba_06.c  amoeba_06.h  colorspace_conversions.c  colorspace_conversions.h  estimate_sky.c  estimate_sky.h  feather_factor.c  feather_factor.h  find_sky.c  find_sky.h  kmeans_rgb.c  kmeans_rgb.h  lensflare.c  mpfit.c  mstat.c  mstat.h  optimize.c  optimize.h  pixel_tests.c  pixel_tests.h  repair_sky.c  repair_sky.h  sample_and_fit_sky_model.c  sample_and_fit_sky_model.h  skyfill_tif.c  skyfill_tif.h
CIE_reference_images/: CIE_README.md
Tutorial/: SkyFill_tutorial_Sun_Model.md  SkyFill_tutorial_fsr.md  SkyFill_tutorial_v1.md  tutorial_index.md
examples/: 2021_GC_lunch.eos  2021_pan02_v2.eos  2021_pan37.eos  doall.sh  examples_README.md  make_lensflare_samples.sh  samples.gnuplot
notes/: sky_replacement_logic.txt
